tests/miniJava/pos/001307_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( this ) while ( 0 ) { } } }
