tests/miniJava/neg/000135_mutation.MiniJava
class java { public } void Main ( String [ ] java ) { { } } }
